Fix #3097: Button text does not fit into the buttons in German (#3191)
* Fix splash

* min-width not compromised on translation

Solution for width should be as per design standards

* Dynamic font-size CSS

Used vw units instead of px in the media query.

* Hardcoded German translation alternates

Changed the long translation to most compressible state. Used Google translate and other dictionaries

* Shorten further hardcoded translations

Lektionen durchsuchen and Lektion erstellen are used now

* Eigene Lektion erstellen

Changed as per review

* Media only css indent corrections

indent corrections

* qqq.json comment update

Added, " The text in the button needs to be less than 29 characters long" To create and browse lessons

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -3456,13 +3456,13 @@ md-card.preview-conversation-skin-supplemental-card {
   border-radius: 0;
   color: #fff;
   font-family: "Capriola", "Roboto", Arial, sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   margin-top: -20px;
-  padding: 10px 0;
+  min-width: 360px;
+  padding: 10px;
   position: absolute;
   text-transform: uppercase;
   transform: translateX(-50%);
-  width: 360px;
 }
 
 .oppia-splash-button:hover,
@@ -3470,6 +3470,12 @@ md-card.preview-conversation-skin-supplemental-card {
 .oppia-splash-button:active {
   background-color: rgba(5, 190, 178, 1);
   color: #fff;
+}
+
+@media only screen and (max-width: 500px) {
+  button.btn.oppia-splash-button {
+    font-size: 3.6vw;
+  }
 }
 
 .oppia-splash-button-container {
